--- a/config.ini
+++ b/config.ini
@@ -1,13 +1,13 @@
 [SplashScreen]
 enabled = True
-imagefile = splash.png
+imagefile = bot.png
 imageheight = 564
 imagewidth = 1000
 titlebarcaption = Welcome, Friend!
 buttoncaption = Let's Go!
 animate = True
-animatesecondsperframe = 5
-frames = 3
+animatesecondsperframe = 6
+frames = 4
 
 [GoldenScreen]
 enabled = True
@@ -28,5 +28,5 @@ ideconfigdestination = /home/pi/.thonny/
 ideconfigfilename = configuration.ini
 
 [Data]
-count = 1
+count = 23
 
